fixed bar chart limits and blurry svg text appearance

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,11 @@ h3 {
     color:#f2f2f2;
     font-size:12px;
 }
+.c3-axis .tick text,
+.c3-legend-item text {
+    stroke:none;
+    fill:#f2f2f2;
+}
 .c3-axis .domain {
     fill: none;
 }
